fluxcd/clusters/pi/home/overseerr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: overseerr
  namespace: home
  labels:
    app: overseerr
spec:
  replicas: 0
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: overseerr
  template:
    metadata:
      name: overseerr
      namespace: home
      labels:
        app: overseerr
    spec:
      containers:
        - name: overseerr
          image: lscr.io/linuxserver/overseerr:1.35.0

          resources:
            requests:
              memory: "200Mi"
              cpu: "150m"
            limits:
              memory: "500Mi"
              cpu: "500m"

          ports:
            - containerPort: 5055
              name: overseerr-port

          volumeMounts:
            - name: overseerr-configs-local
              mountPath: /config

      volumes:
        - name: overseerr-configs-local
          persistentVolumeClaim:
            claimName: overseerr-configs-local
