fluxcd/clusters/pi/home/overseerr/patch-ports.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: overseerr
  namespace: home
spec:
  template:
    spec:
      containers:
        - name: overseerr
          ports:
            - containerPort: 55555
              name: base-port
