fluxcd/clusters/pi/home/overseerr/patch-volumes.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: overseerr
  namespace: home
spec:
  template:
    spec:
      containers:
        - name: overseerr
          volumeMounts:
            - name: overseerr-configs
              mountPath: /config
      volumes:
        - name: overseerr-configs
          persistentVolumeClaim:
            claimName: overseerr-configs
