fluxcd/clusters/pi/home/overseerr/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: overseerr
  namespace: home
  labels:
    app: overseerr
spec:
  serviceName: overseerr
  replicas: 1
  selector:
    matchLabels:
      app: overseerr
  template:
    metadata:
      name: overseerr
      namespace: home
      labels:
        app: overseerr
    spec:
      terminationGracePeriodSeconds: 120
      containers:
        - name: overseerr
          image: lscr.io/linuxserver/overseerr:1.35.0
          ports:
            - containerPort: 5055
              name: overseerr-port
          resources:
            requests:
              memory: "200Mi"
              cpu: "150m"
            limits:
              memory: "500Mi"
              cpu: "1000m"
          lifecycle:
            preStop:
              exec:
                command: ["sh", "-c", "sync; sleep 5"]
          volumeMounts:
            - name: overseerr-configs
              mountPath: /config
  volumeClaimTemplates:
    - metadata:
        name: overseerr-configs
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: longhorn
        resources:
          requests:
            storage: 100Mi
