fluxcd/clusters/pi/home/overseerr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: overseerr
  namespace: home
spec:
  selector:
    app: overseerr
  ports:
    - name: overseerr-port
      port: 80
      targetPort: overseerr-port
