fluxcd/clusters/pi/home/overseerr/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: overseerr-ingress-route
  namespace: home
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.requests.fellowfreak.dev`)
      kind: Rule
      services:
        - name: overseerr
          port: 80
    - match: Host(`requests.fellowfreak.dev`)
      kind: Rule
      services:
        - name: overseerr
          port: 80
  # middlewares:
  #   - name: default-headers
  tls:
    secretName: fellowfreak-dev-production-tls
